# LearnFFmpeg

./: CMakeLists.txt
Step1/: CMakeLists.txt
cmake/: FindFFmpeg.cmake
ffplay/: CMakeLists.txt
ffplay/src/: step1.c
